# cmus-notify

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: check.yaml  publish.yaml
cmus_notify/: cmus_notify.py  configurations.py  constants.py  formatters.py  notifications.py  options.py  parsers.py  types.py
docs/: Makefile  cmus_notify.rst  conf.py  index.rst  make.bat  modules.rst
tests/: test_parsers.py
