[project]
name = "cmus-notify"
authors = [
    { name = "Antoine Gagné", email = "AntoineGagne@users.noreply.github.com" }
]
maintainers = [
    { name = "Antoine Gagné", email = "AntoineGagne@users.noreply.github.com" }
]
license = "MIT"
dynamic = ["version"]
description = "A package for displaying Cmus current status in notifications"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "desktop-notify~=1.3; platform_system == 'Linux'"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio"
]

[project.urls]
Homepage = "https://github.com/AntoineGagne/cmus-notify"
Repository = "https://github.com/AntoineGagne/cmus-notify"
"Bug Tracker" = "https://github.com/AntoineGagne/cmus-notify/issues"

[project.scripts]
cmus_notify = "cmus_notify.cmus_notify:main"

[dependency-groups]
dev = [
  "ruff~=0.12",
  "pytest~=8.2",
  "setuptools~=80.9",
  "setuptools-scm~=8.3",
  "wheel~=0.45",
]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 96
output-format = "concise"
src = ["cmus_notify", "tests"]

[tool.ruff.format]
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["cmus_notify"]
exclude = ["**/__pycache__"]

[tool.setuptools.packages.find]
include = ["cmus_notify*"]

[tool.setuptools_scm]
version_scheme = "only-version"
